# Copyright (c) 2021 Philippe Proulx <eepp.ca>
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[build-system]
requires = [ 'poetry>=0.12' ]
build-backend = 'poetry.masonry.api'

[tool.poetry]
name = 'boomer'
version = '0.1.0'
description = "Rend un texte en français tel que certains boomers québécois l'auraient écrit"
license = 'MIT'
authors = [ 'Philippe Proulx <eeppeliteloop@gmail.com>' ]
repository = 'https://github.com/eepp/boomer/'
keywords = [
    'quebec',
    'queb',
    'keb',
    'boomer',
    'nlp',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Religion',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Natural Language :: French',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Text Processing :: Linguistic',
]
packages = [ { include = 'boomer' } ]

[tool.poetry.dependencies]
python = '^3.6'

[tool.poetry.scripts]
boomer = 'boomer.cli:_main'

[tool.poetry.urls]
'Bug tracker' = 'https://github.com/eepp/boomer/issues/'
